--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@0xpass/node": "^0.0.3",
+    "@0xpass/react": "^0.0.2",
+    "ethers": "^5.7.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.7.5"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
